--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: OM Jeweller Application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+#publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -46,6 +46,7 @@ dependencies:
   dotted_line: ^2.0.2
   splashscreen: ^1.3.5
   google_maps_flutter: ^1.2.0
+  url_launcher: ^5.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
