--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.jvmargs=-Xmx1536M
+#org.gradle.jvmargs=-Xmx1024M
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+org.gradle.java.home=C:\\Program Files (x86)\\Java\\jdk1.8.0_301
