--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,43 +23,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  badges: ^1.1.1
-  basic_utils: ^2.5.3
-  cached_network_image: ^2.2.0+1
-  carousel_slider: ^2.3.1
+  badges: ^2.0.2
+  basic_utils: ^3.4.0
+  cached_network_image: ^3.2.0
+  carousel_slider: ^4.0.0
   edge_alert: ^0.0.1
-  dartx: ^0.5.0
-  dio: ^3.0.9
-  dio_http_cache: ^0.2.7
+  dartx: ^1.0.0
+  dio: ^4.0.4
+  dio_http_cache: ^0.3.0
   shared_preferences: any
-  lottie: ^0.4.0
-  flutter_icons: ^1.0.0+1
-  google_fonts: ^0.4.0
-  stacked: ^1.7.6
-  shimmer: ^1.1.1
-  flutter_svg: ^0.19.0
-  bottom_animation: ^1.2.0
-  chewie: ^0.12.2
-  video_player: ^1.0.1
-  flutter_staggered_animations: ^0.1.2
+  lottie: ^1.2.1
+  flutter_icons: ^1.1.0
+  google_fonts: ^2.2.0
+  stacked: ^2.2.1
+  shimmer: ^2.0.0
+  flutter_svg: ^1.0.0
+  bottom_animation: ^2.0.0
+  chewie: ^1.2.2
+  video_player: ^2.2.10
+  flutter_staggered_animations: ^1.0.0
   table_calendar: ^2.1.0
-  dotted_line: ^2.0.2
+  dotted_line: ^3.1.0
   splashscreen: ^1.3.5
-  google_maps_flutter: ^1.2.0
-  url_launcher: ^5.5.0
-  sms_autofill: ^1.3.1
-  location: ^3.0.0
-  location_permissions: ^3.0.0+1
-  flutter_launcher_icons: ^0.7.2+1
-  flutter_launcher_name: ^0.0.1
-
+  google_maps_flutter: ^2.0.9
+  url_launcher: ^6.0.17
+  sms_autofill: ^2.2.0
+  location: ^4.3.0
+  location_permissions: ^4.0.1
+  flutter_launcher_icons: ^0.9.2
+  #flutter_launcher_name: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-flutter_launcher_name:
-  name: "OM Jewellers"
+#flutter_launcher_name:
+#  name: "OM Jewellers"
 flutter_icons:
   android: "launcher_icon"
   ios: true
@@ -71,7 +70,7 @@ dev_dependencies:
 
 dependency_overrides:
   # Override path_provider to pick up fixes for FFI changes.
-  path_provider: ^1.6.28
+  path_provider: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
