--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
-org.gradle.java.home=C:\\Program Files (x86)\\Java\\jdk1.8.0_301
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk-18.0.1.1
