--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ description: OM Jeweller Application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.5+6
+version: 1.0.7+8
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -39,8 +39,8 @@ dependencies:
   shimmer: ^2.0.0
   flutter_svg: ^1.0.0
   bottom_animation: ^2.0.0
-  chewie: ^1.2.2
-  video_player: ^2.2.10
+  #chewie: ^1.2.2
+  #video_player: ^2.2.10
   flutter_staggered_animations: ^1.0.0
   table_calendar: ^2.1.0
   dotted_line: ^3.1.0
@@ -51,6 +51,9 @@ dependencies:
   location: ^4.3.0
   location_permissions: ^4.0.1
   flutter_launcher_icons: ^0.9.2
+  #youtube_player_flutter: ^8.0.0
+  #pod_player: ^0.0.5
+
   #flutter_launcher_name: ^0.0.1
 
   # The following adds the Cupertino Icons font to your application.
